--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 h1 {
   font-size: 3rem;
   margin: 20px;
+  font-style: italic;
 }
 
 input {
@@ -39,13 +40,17 @@ input {
   text-align: center;
   background-color: transparent;
   border-bottom: 2px solid lightskyblue;
-  border-left: 2px solid lightskyblue;
+  border-left: none;
   border-right: none;
   border-top: none;
 }
 
 input:focus {
   outline: none;
+}
+
+p {
+  margin: 20px;
 }
 
 ::-webkit-input-placeholder { /* Chrome */
@@ -75,6 +80,17 @@ li {
 }
 
 button {
+  margin: 20px;
+  width: 75px;
+  font-size: 1.2rem;
+  color: whitesmoke;
+  text-align: center;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.remove {
   border: 2px solid whitesmoke;
   border-radius: 2px;
   background-color: transparent;
