testing transition-group animation

--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,15 @@ option {
     width: 100%;
   }
 }
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .7s;
+}
+
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+
+.slide {
+  transition: transform 1s;
+}
